projects/vb6parse/snapshots/tests/library/string/string_function/string_expression_length.snap
---
source: projects/vb6parse/tests/library/string/string_function.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: LineInputStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: LineKeyword
                  text: line
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: maxWidth
                - kind: Whitespace
                  text: " "
                - kind: SubtractionOperator
                  text: "-"
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: currentWidth
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\" \""
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
